--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <tile>Yeah Yeah</tile>
   </head>
   <body>
+  <hi>Hello, code School</hi>
+  	<ui>
+  		<li>Front End</li>
+  		<li>Front End - Design</li>
+  		<li>Back End</li>
+  		<li>Back End - Model</li>
+  	</ui>
 
   </body>
 </html>
