--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <tile>Yeah Yeah</tile>
+    <title>Yeah Yeah</title>
   </head>
   <body>
-  <hi>Hello, code School</hi>
+  <hi>Hello, Code School!!</hi>
   	<ui>
   		<li>Front End</li>
   		<li>Front End - Design</li>
