--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Yeah Yeah</title>
   </head>
   <body>
-  <hi>Hello, Code School!!</hi>
-  	<ui>
+  <h1>Hello, Code School!!</h1>
+  	<ul>
   		<li>Front End</li>
   		<li>Front End - Design</li>
   		<li>Back End</li>
   		<li>Back End - Model</li>
-  	</ui>
+  	</ul>
 
   </body>
 </html>
