--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Yeah Yeah</title>
   </head>
   <body>
-  <h1>Hello, Code School!!</h1>
+  <h1>Hello, Code School!</h1>
   	<ul>
   		<li>Front End</li>
   		<li>Front End - Design</li>
